--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 bin/
 obj/
+
+node_modules/
+
+.output
+.vercel
+.netlify
+.wrangler
+.svelte-kit/
+build/
+
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
